styles/style.css
/* Font */
body {
    font-family: 'saira', sans-serif;
    justify-content: center;
    display: flex;
}

/* variables */
:root {
    --background-image: url("../assets/images/background-2.jpg");
    --font-color: white;
    --font-color-alt: black;
    --button-background: rgba(255, 255, 255, 0.5);
    --font-weight: normal;
}

.background {
    background-image: var(--background-image);
    z-index: -1;
    background-repeat: no-repeat;
    position: fixed;
    width: 100vw;
    height: 100vh;
    background-position: center;
    background-size: cover;
    top: 0;
    left: 0;
}

/* global modal styles */

.modal.show {
    visibility: visible;
}

.modal {
    visibility: hidden;
    border-radius: 35px;
    background: rgba(255, 255, 255, 0.8);
    z-index: 11;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
    overflow: auto;
    position: absolute;
}

.modal-container {
    opacity: 0;
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    transition: backdrop-filter opacity;
    transition-duration: 0.3s;
    transition-timing-function: ease;
    z-index: -1;
    display: flex;
    align-items: center;
    justify-content: center;
}

.modal-container.show {
    opacity: 1;
    z-index: 10;
    background: rgba(0, 0, 0, 0.5);
    backdrop-filter: blur(10px);
}

/* individual modal styles */

#wechat-modal img {
    width: 95vw;
    max-width: 400px;
    height: auto;
}

#wechat-modal {
    display: flex;
}

#email-modal {
    padding: 5px 20px;
}

#matchatab-modal {
    width: 80vw;
    max-width: 900px;
    height: 80vh;
    max-height: 550px;
    display: flex;
    flex-direction: row;
}


.matchatab.images-container {
    display: flex;
    flex-direction: column;
    gap: 10px;
    width: 50vw;
    padding: 20px;
    overscroll-behavior: contain;
    scrollbar-width: none;
    overflow: auto;
    position: relative;
}

.matchatab.images-container::-webkit-scrollbar {
    display: none;
}

.matchatab.images-container img {
    width: 100%;
    height: auto;
    border-radius: 20px;
}

.matchatab.description {
    width: 30vw;
    display: flex;
    flex-direction: column;
    overscroll-behavior: contain;
    scrollbar-width: none;
    padding: 30px 20px;
    position: relative;
    align-items: center;
    height: auto;
}

.matchatab.buttonv2 {
    position: absolute;
    bottom: 15px;
}

.matchatab.description p {
    overflow: auto;
    overscroll-behavior: contain;
    position: relative;
    bottom: 20px;
    scrollbar-width: none;
    padding-bottom: 60px;
    mask-image: linear-gradient(to bottom, black 70%, transparent 100%);
}

.matchatab.description p::-webkit-scrollbar {
    display: none;
}

.matchatab.description::-webkit-scrollbar {
    display: none;
}

.matchatab.description img {
    height: auto;
    width: 100px;
}

/* button styles */
.button,
.button:visited {
    padding: 5px 5px;
    align-items: center;
    justify-content: center;
    border: none;
    text-decoration: none;
    background: var(--button-background);
    border-radius: 20px;
    font-family: inherit;
    font-size: inherit;
    cursor: pointer;
    box-sizing: border-box;
    transition: all 0.2s ease, color 0.3s ease;
    color: var(--font-color-alt);
    backdrop-filter: blur(20px);
    overflow: hidden;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
    min-width: fit-content;
}

.button.scrolled {
    display: grid;
    grid-template-columns: auto 1fr;
    gap: 10px;
    min-width: none;
    min-height: none;
    padding: 10px 10px;
    border-radius: 17px;
}

.button img {
    display: block;
    margin: 0 auto;
    border-radius: 20px;
    width: 70px;
    height: 70px;
    transition: margin-left 0.2s ease;
}

.button.scrolled img {
    margin-left: 5px;
}

.button span {
    text-align: center;
    display: none;
}

.button.scrolled span {
    display: block;
}

/* buttonv2 styles */
.buttonv2,
.buttonv2:visited {
    display: flex;
    align-items: center;
    justify-content: center;
    border: none;
    text-decoration: none;
    padding: 10px 10px;
    border-radius: 17px;
    font-family: inherit;
    font-size: inherit;
    cursor: pointer;
    box-sizing: border-box;
    transition: all 0.2s ease, color 0.3s ease;
    color: white;
    background: rgba(0, 0, 0, 0.757);
    backdrop-filter: blur(5px);
    overflow: hidden;
    width: fit-content;
    padding: 10px 50px;
}


.buttonv3 {
    position: absolute;
    right: 20px;
    top: 20px;
    height: 40px;
    width: 40px;
    padding: 7px;
    border-radius: 50%;
    background: rgb(175, 175, 175);
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
    border: none;
    transition: all 0.2s ease;
    cursor: pointer;
}

.buttonv3 svg {
    stroke: rgb(54, 54, 54);
}

/* social section */
.social-section {
    display: flex;
    gap: 10px;
    height: fit-content;
    margin-top: 15px;
    margin-bottom: 40px;
    overflow-x: auto;
    scrollbar-width: none;
}

.social-section::-webkit-scrollbar {
    display: none;
}

.social-section.scrolled {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(175px, 1fr));
    grid-auto-rows: 100px;
}

/* quick link section */
.quick-link-section {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(170px, 1fr));
    grid-auto-rows: 100px;
    gap: 10px;
    height: fit-content;
    margin-top: 30px;
    margin-bottom: 40px;
}

#back-button {
    position: absolute;
    opacity: 0;
    top: 0;
    right: -15px;
    transition: all 0s 0s;
}

#back-button.scrolled {
    opacity: 1;
    transition: all 0.5s 0.3s;
}
/* ... */

